@@ -264,6 +264,8 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   duplicate_url_on_unretire         "URL conflict detected. Template $id has the same URL as Template $other_id ($url). Please make place!"
   template_stolen_before_checkout   "Template $id has been checked out by $thief."
   template_permissions_changed      "Your edit permissions for template $id were removed."
+  checked_out                       "Template '$file' (ID: $id) is aleady checked out by another user." 
+  selected_template_checkout        "The selected templates have been checked out."
 </Module>
 
 <Module "Krang::CGI::User">
